# opengl-testing

./: .gitignore  compile_commands.json
project/: CMakeLists.txt  glad.c  main.cpp  shader.cpp  shader.frag  shader.hpp  shader.vert
project/include/glad/: glad.h
